--- a/4.ci_and_publishing/house-prices-api/tox.ini
+++ b/4.ci_and_publishing/house-prices-api/tox.ini
@@ -1,5 +1,5 @@
 # Tox is a generic virtualenv management and test command line tool. Its goal is to
-# standardize testing in Python. We will be using it extensively in this course.
+# standardize testing in Python.
 
 # Using Tox we can (on multiple operating systems):
 # + Eliminate PYTHONPATH challenges when running scripts/tests
