--- a/5.deploying_with_containers/house-prices-api/tox.ini
+++ b/5.deploying_with_containers/house-prices-api/tox.ini
@@ -10,11 +10,14 @@
 log_cli_level=WARNING
 
 [tox]
-envlist = test_app, checks
+envlist = test_app, typechecks, stylechecks, lint
 skipsdist = True
 
 [testenv]
 install_command = pip install {opts} {packages}
+
+passenv =
+	PIP_EXTRA_INDEX_URL
 
 [testenv:test_app]
 deps =
@@ -41,7 +44,6 @@ setenv =
 commands=
 	python app/main.py
 
-
 [testenv:checks]
 envdir = {toxworkdir}/checks
 deps =
@@ -52,7 +54,6 @@ commands =
 	black app
 	{posargs:mypy app}
 
-
 [flake8]
 exclude = .git,__pycache__,__init__.py,.mypy_cache,.pytest_cache,.venv,alembic
-max-line-length = 88
+max-line-length = 150
