--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -280,12 +280,12 @@ workflows:
       - section_04_test_and_upload_regression_model:
           <<: *tags_only
 
-      - section_05_deploy_app_container_via_railway:
-         filters:
-           branches:
-             only:
-               - main
-               - demo
+      # - section_05_deploy_app_container_via_railway:
+      #    filters:
+      #      branches:
+      #        only:
+      #          - main
+      #          - demo
 
 #  test-all:
 #    jobs:
